<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Github User3</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="name_user">Name User</string>
    <string name="user">User</string>
    <string name="github_users">GitHub Users</string>
    <string name="search">Search</string>
    <string name="ask_join">don\'t have a github account?</string>
    <string name="let_s_join">Join</string>
    <string name="search_result">Search Result :</string>
    <string name="desc_no_search">No Search Results \nTry Searching</string>
    <string name="no_result">no result</string>
    <string name="button_search">button search</string>
    <string name="background_detail">background detail</string>
    <string name="card_detail">card detail</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="oops">Oops!!</string>
    <string name="desc_no_connect">No internet connection found. \n Check your internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="fav_user">Favorite User</string>
    <string name="add_fav">Added to Favorite User</string>
    <string name="rm_fav">Removed from Favorite User</string>
    <string name="settings">Settings</string>
    <string name="notification_message">Time to find your user favorite!</string>
    <string name="remainder_on">Repeating Alarm is On</string>
    <string name="remainder_pending">Repeating Alarm is pending</string>
    <string name="no_favorite">no favorite</string>
    <string name="not_found_favorite_user">Not Found Favorite User</string>
    <string name="remainder_at_9_00_am">Remainder at 9.00 AM</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="select_language">Select Language</string>
    <string name="lang">English</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

</resources>